--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1mL5S0rIeJicU2Qr6ghpJU86CMMstUTIT/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -532,7 +532,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1mL5S0rIeJicU2Qr6ghpJU86CMMstUTIT/view?usp=sharing">resumelink</a></p>
+	            <p><a href="#">resumelink</a></p>
 	          </div>
           </div>
 
